# CMMOFLP-Nuclear-Siting

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
configs/: README.md  full_experiment.yaml  xlarge_calibration.yaml  xxlarge_clustered_tight.yaml  xxlarge_uniform_tight.yaml
docs/: ablation_study.md  advanced_heuristic.md  development_plan.md  exact_mip_metrics_and_xlarge.md  exact_pilot_experiments.md  experimental_protocol.md  experiments.md  final_benchmark_protocol.md  final_results_analysis.md  fresh_instance_per_seed.md  heuristic_gap_analysis.md  heuristics.md  implementation_notes.md  index.md  instance_format.md  instance_generation.md  instances.md  mathematical_models.md  no_incumbent_handling.md  pilot_experiments.md  problem.md  problem_definition.md  repair_recursion_limit.md  results.md  search_stopping_protocol.md  toy_instance_solution.md
models/: README.md  compact.mod  threshold.mod
results/: README.md
scripts/: README.md  analyze_ablation.py  analyze_exact_results.py  analyze_final_results.py  analyze_grasp_vnd_pilot.py  analyze_heuristic_gaps.py  analyze_pilot_results.py  check_instance.py  check_upper_bound_pilot.py  generate_final_plots.py  generate_instances.py  generate_sample.py  inspect_instance_manifest.py  merge_manifests.py  run_baseline_benchmark.py  run_compact.run  run_exact_benchmark.py  run_exact_toy.py  run_grasp_vnd.py  run_grasp_vnd_benchmark.py  run_greedy.py  run_local_search.py  run_pilot_exact.py  run_pilot_grasp_vnd.py  run_pilot_heuristics.py  run_threshold_search.run
tests/: README.md  test_ampl_runner.py  test_exact_analysis.py  test_exact_mip_metrics.py  test_experiment_runner.py  test_fresh_instance_per_seed.py  test_gap_analysis.py  test_grasp_vnd.py  test_grasp_vnd_analysis.py  test_grasp_vnd_runner.py  test_greedy_heuristic.py  test_inspect_instance_manifest.py  test_instance.py  (+10 more)
(+71 files in other folders)
